cluster/apps/homelab/pihole/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    app.kubernetes.io/name: pihole
