cluster/apps/homelab/pihole/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
    - name: homelab-gateway
      namespace: gateway
      sectionName: https
  hostnames:
    - "pihole.martinez-saweczko.es"
  rules:
    - backendRefs:
        - name: pihole-web
          port: 80
